#18922 closed bug (fixed)
Pagefault and Kernel Panic with flaky USB setup
Reported by: | DrDebug42 | Owned by: | mmlr |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta5 |
Component: | Drivers/USB | Version: | R1/beta4 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #18314 | |
Platform: | All |
Description (last modified by )
Hi,
for an experimental Haiku installation (R1/beta4) I used an older machine with a somewhat special USB setup for input (KVM, USB hub, ...). In a Linux installation on the same machine I have seen kernel error messages as well but on Haiku I frequently get Kernel Panics on the machine. The KDL does not react to any input, I presume this is because the panic seems to be related to USB. I have taken a picture of the KDL crash stack and will attach it to this ticket.
I tried to have a look at the source code and relate it to the crash stack and I think I found and attempted to fix the issue in the following change (admittedly I did not demangle the function calls from the stack):
https://review.haiku-os.org/c/haiku/+/7821
I tried several boots with a recent nightly build (anyboot on USB stick) including my fix without any issue. Trying the same nightly build without the fix resulted in a panic on the first try.
I will try to get at the syslog of the machine and include it here as well.
Best regards and many thanks
Timm
Attachments (2)
Change History (9)
by , 8 months ago
Attachment: | IMG_20240627_070648.jpg added |
---|
comment:1 by , 8 months ago
Description: | modified (diff) |
---|
comment:2 by , 8 months ago
Description: | modified (diff) |
---|
comment:3 by , 8 months ago
Keywords: | Panic USB Pagefault removed |
---|
comment:4 by , 8 months ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Patch merged in hrev57801. Thanks for contributing it!
I would still be interested in a syslog if you manage to get one. Do note that if the boot completes to the desktop, the syslog should be saved to disk, and you can just reboot (ACPI shutdown, if keyboard/mouse aren't working) and then extract the file on another OS (Linux can usually read BeFS.)
by , 8 months ago
Attachment: | syslog-haiku-hrev57801-20240701 added |
---|
comment:5 by , 8 months ago
Hi,
apologies for delay but I now have a syslog file from the system. I booted the fixed hrev57801 snapshot from USB stick, assuming that it would see the same problems but not panic if they occur. I hope this will be of help.
Best regards
Timm
comment:6 by , 8 months ago
The only interesting thing I see is this:
KERN: usb_hid: found quirky device, using patched descriptor KERN: usb_hid: no handlers for hid device
Probably the device IDs should be printed with this message so we can see what's going on.
comment:7 by , 4 months ago
Blocking: | 18314 added |
---|
Screenshot of the KDL panic and callstack