USB: Add nullpointer checks to USB Device destructor

It seems to be possible that in case of USB issues a Device
is destroyed before it is registered with the device manager.
In such a case fNode of the device is NULL and there is a
page fault followed by a panic.

Fixes #18922.

Change-Id: I0a363a0ff85e6a74788701738e0cb85a90e99a05
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7821
Reviewed-by: waddlesplash <waddlesplash@gmail.com>